--- a/package.json
+++ b/package.json
@@ -1,24 +1,32 @@
 {
-  "name": "react",
-  "version": "0.0.0",
+  "name": "planning-poker",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@firebase/app": "^0.5.6",
-    "firebase": "7.11.0",
-    "react": "16.13.0",
-    "react-dom": "16.13.0",
-    "react-spring": "^8.0.27",
-    "stats-lite": "^2.2.0",
-    "uuid": "7.0.2"
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.5.0",
+    "@types/jest": "^26.0.16",
+    "@types/node": "^12.19.8",
+    "@types/react": "^16.14.2",
+    "@types/react-dom": "^16.9.10",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-scripts": "4.0.1",
+    "typescript": "^4.1.2",
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {
-    "react-scripts": "latest"
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
