--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "@types/node": "^12.19.8",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
+    "@types/react-router-dom": "^5.1.6",
+    "@types/shortid": "0.0.29",
     "@types/uuid": "^8.3.0",
     "firebase": "^8.1.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "shortid": "^2.2.16",
     "typescript": "^4.1.2",
     "uuid": "^8.3.1",
     "web-vitals": "^0.2.4"
