--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^16.9.10",
     "@types/react-router-dom": "^5.1.6",
     "@types/shortid": "0.0.29",
+    "@types/stats-lite": "^2.2.0",
     "@types/uuid": "^8.3.0",
     "firebase": "^8.1.2",
     "react": "^17.0.1",
@@ -21,6 +22,7 @@
     "react-scripts": "4.0.1",
     "react-spring": "^8.0.27",
     "shortid": "^2.2.16",
+    "stats-lite": "^2.2.0",
     "typescript": "^4.1.2",
     "uuid": "^8.3.1",
     "web-vitals": "^0.2.4"
